<resources>
    <string name="app_name">Calculate</string>

    <string name="areas_rectangle_width_hint">Width</string>
    <string name="areas_rectangle_height_hint">Height</string>
    <string name="areas_circle_radius_hint">Radius</string>
    <string name="areas_triangle_base_hint">Base</string>
    <string name="areas_triangle_height_hint">Height</string>
    <string name="areas_calculate_text">Calculate</string>

    <string-array name="shapes">
        <item>select shape</item>
        <item>Rectangle</item>
        <item>Circle</item>
        <item>Triangle</item>
    </string-array>

</resources>